add guards, login, auth whith google

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="google-signin-client_id" content="812269500406-2ltv3tkm1vuaqdffq5hr5j5h4lps2hti.apps.googleusercontent.com">
     <title>AdminPro</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -36,6 +37,9 @@
 
     <!-- All Jquery -->
     <!-- ============================================================== -->
+    <!-- Google sigin-->
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <!-- Google sigin-->
     <script src="./assets/plugins/jquery/jquery.min.js"></script>
     <!-- Bootstrap tether Core JavaScript -->
     <script src="./assets/plugins/bootstrap/js/popper.min.js"></script>
